[Eaton-30] Country Selector Drawer: Fix the bootstrap bug where `collapse only hides the content. (Reset the header)

--- a/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-drawer.scss
@@ -215,7 +215,8 @@ $border-color: rgba($color__secondary-gray4, 0.5);
         z-index: 5;
         border-left: 5px solid $color__primary-gray2;
 
-        &:focus, &:active {
+        &:focus,
+        &:active {
           text-decoration: none;
         }
 
